# bright-vision

./: .gitignore  .gitmodules  .pnp.cjs  AGENTS.md  README.md  To keep parsing robust in Rust, I'll refactor Aider to emit structured JSON lines to `stdout`. Here's the schema we'll target  activate.sh  index.html  local-llm.env.example  package.json  playwright.config.ts  playwright.integration.config.ts  playwright.llm.config.ts  pyproject.toml  pytest.ini  requirements-core.txt  vite.config.ts  vite.e2e-preview.ts
assets/: BrightVision.icns  bright-vision-bold.ai  bright-vision-horiz-bold.ai  bright_vision_bold_logo.ai
bench-submissions/: README.md
bright_vision_core/: README.md  __init__.py  agent_todos.py  async_bridge.py  brand.py  cli_serve.py  gui_progress.py  headless_args.py  headless_persistence.py  headless_stdio.py  http_api.py  http_auth.py  model_router.py  session.py  session_transcript.py  slash_helpers.py  spec_layers.py  spec_steering.py  todo_markdown.py  todo_spec_generate.py  todo_spec_jobs.py  vision_runtime.py  vision_serve.py  workspace_paths.py  workspace_todos.py
docs/: ARCHITECTURE.md  BRIGHT_VISION_PIVOT.md  BUILD_MACOS.md  CECLI_MIGRATION_ROADMAP.md  CECLI_PIN.md  CNAME  CORE_FILE_MERGE.md  DEVELOPMENT.md  DOGFOOD.md  EARS_MODULE.md  ENGINE_TRANSITION.md  FEATURES.md  FUNCTIONALITY_CHECKLIST.md  IPC.md  LOCAL_LLM.md  MOBILE_ALERTS.md  RELEASE.md  ROADMAP.md  SPEC_DRIVEN_DEV.md  SUBMODULE_VERIFICATION.md  TESTING.md  TESTING_POLICY.md  index.html  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_ops.rs  local_llm_config.rs  local_llm_runtime.rs  main.rs  ntfy_notify.rs  resource_monitor.rs  session_key.rs  workspace_editor.rs
(+323 files in other folders)
