[project]
name = "bright-vision-core"
description = "Headless HTTP/SSE API for the BrightVision desktop app (on Cecli)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn[standard]>=0.48.0",
  "httpx>=0.28.0",
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Digital-Defiance/BrightVision"
Repository = "https://github.com/Digital-Defiance/BrightVision"

[project.scripts]
bright-vision-core-serve = "bright_vision_core.cli_serve:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["bright_vision_core*"]

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "bright_vision_core/_version.py"
local_scheme = "no-local-version"
